fix search bar active state on safari

--- a/website/assets/styles/pages/docs/basic-documentation.less
+++ b/website/assets/styles/pages/docs/basic-documentation.less
@@ -101,7 +101,7 @@
       width: 98%;
     }
 
-    .ds-input:focus-visible {
+    .ds-input:focus {
       outline: rgba(0, 0, 0, 0);
     }
 
